tests/negative/neg_pr1113a_payload_interface_type.safe
package neg_pr1113a_payload_interface_type

   type printable is interface
      function (self : printable) render returns string

   type shape is wrapped (value : printable) or idle
